Fix localization issues with dutch language and implement fallback based upon https://github.com/jessesquires/JSQMessagesViewController/pull/1904/commits/b319852c003f11927272a3dd99177010428ae99c

--- a/JSQMessagesViewController/Assets/JSQMessagesAssets.bundle/nl.lproj/JSQMessages.strings
+++ b/JSQMessagesViewController/Assets/JSQMessagesAssets.bundle/nl.lproj/JSQMessages.strings
@@ -27,3 +27,11 @@
 "send" = "Stuur";
 
 "new_message" = "Nieuw bericht";
+
+"text_message_accessibility_label" = "%@: %@";
+
+"media_message_accessibility_label" = "%@: media bericht";
+
+"accessory_button_accessibility_label" = "Deel media";
+
+"new_message_received_accessibility_announcement" = "Nieuw bericht ontvangen";
